Updated Lab Search UI and Server functionality
